@@ -57,6 +57,7 @@ Revision 0.3.0, released XX-XX-2021
 - Add RFC7836 providing  Cryptographic Algorithms for GOST R 34.10-2012
   and GOST R 34.11-2012
 - Modified RFC4357 to include the new parameter set in RFC7836
+- Add RFC8994 providing ACP Node Name in X.509 Certificates
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
